<resources>
    <string name="app_name">Task_1</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="videos">Videos</string>
    <string name="image">Images</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="imageCount">0</string>
    <string name="done">Done</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>

    <string name="unlockAllFeatures">Unlock All Features</string>
    <string name="unlimitedScanning">Unlimited Scanning</string>
    <string name="adFreeExperience">Ad Free Experience</string>
    <string name="premiumFeatures">Premium Features</string>
    <string name="monthlyPkgPrice">Rs 750.00/Month</string>
    <string name="threeDaysFreeTrial">3-Days Free Trial</string>
    <string name="monthYearPkgPrice">Rs 4,500.00/Year (Rs 4,500.00 375.00/Month)</string>
    <string name="oneTimePkgPrice">Rs 2,000.00/One time purchase</string>
    <string name="con">Continue</string>
    <string name="autoRenewableCancelAnytime">Auto-renewable,Cancel anytime</string>
    <string name="termAndUse"><u>Terms and Use</u></string>
    <string name="privacyPolicy"><u>Privacy Policy</u></string>
    <string name="save70">Save 70%</string>

    <string name="getPremiumNow">Get Premium Now!</string>
    <string name="pkrPerYears">PKR: 14000/ per year</string>
    <string name="just12000PerYear">just PKR 12,00 monthly</string>
    <string name="eight5ff">85% OFF</string>
    <string name="weekly">WEEKLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="weekPrice">PKR:1,500</string>
    <string name="monthPrice">PKR:9,500</string>
    <string name="text_with_bullet">Text with a</string>
    <string name="text1">Printer took a gallery of type and scrambled it make.</string>
    <string name="text2">Centuries, but also the leap into electric.</string>
    <string name="restore">Restore</string>
    <string name="termOfUse">Term of use</string>
</resources>