<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/memberBgColor"
    tools:context=".ui.activity.MemberShipActivity">
    <ImageView
        android:id="@+id/memberImageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_member"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:elevation="80dp"
        android:background="@drawable/ic_image_shadow_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/unlockAllFeaturesTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlockAllFeatures"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memberImageview"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unlimitedScanning"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="@id/unlockAllFeaturesTextview"
        app:layout_constraintTop_toBottomOf="@id/unlockAllFeaturesTextview"
        app:drawableStartCompat="@drawable/ic_electricity" />
</androidx.constraintlayout.widget.ConstraintLayout>